# LFU-Cache

./: .gitignore  README.md
Cache/: CMakeLists.txt  tmp
Cache/include/: LFU_hashmap.hpp  LFU_slow.hpp  perfect_cache.hpp
Cache/src/: LFU_hashmap.cpp  LFU_slow.cpp  perfect_cache.cpp
LFU/: CMakeLists.txt  LFU_cringe.cpp  LFU_hashmap.cpp  LFU_slow.cpp  Makefile  main.cpp  perfect_cache.cpp  test_input.txt
LFU/.cache/clangd/index/: LFU.hpp.D4CEAADA239CD106.idx  main.cpp.D20DA0688C91AB8C.idx
LFU/include/: LFU.hpp  LFU_cringe.hpp  LFU_hashmap.hpp  LFU_slow.hpp  perfect_cache.hpp
test_gen/: compare.sh  gen_tests.py  run_tests.sh  test_and_compare.sh
test_gen/tests/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
